[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/UI-Art/closeicon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/TitanOne40.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/menu_controller.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/reseticon.png-7bbe230a392d15bad571b0c44645cfee.stex"

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 220
custom_constants/margin_bottom = 390
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_top = 220.0
margin_right = 480.0
margin_bottom = 463.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 220.0
margin_right = 480.0
margin_bottom = 463.0
custom_constants/separation = 10

[node name="Panel" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 480.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="MenuLabel" type="Label" parent="VBoxContainer/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -23.0
margin_bottom = 23.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 480.0
margin_bottom = 225.0
size_flags_horizontal = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Buttons"]
margin_right = 480.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" parent="VBoxContainer/Buttons/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 190.0
margin_top = 0.0
margin_right = 290.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Buttons/VBoxContainer"]
margin_left = 120.0
margin_top = 65.0
margin_right = 360.0
margin_bottom = 115.0
size_flags_horizontal = 4
custom_constants/separation = 40

[node name="Restart" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
self_modulate = Color( 0.898039, 0.223529, 0.901961, 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = 100.0
margin_bottom = 50.0

[node name="Icon" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Restart/MarginContainer/HBoxContainer" index="0"]
texture = SubResource( 1 )

[node name="Label" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Restart/MarginContainer/HBoxContainer" index="1"]
text = "Reset"

[node name="Close" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
self_modulate = Color( 0.952941, 0.341176, 0.180392, 1 )
margin_top = 0.0
margin_bottom = 50.0

[node name="Icon" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Close/MarginContainer/HBoxContainer" index="0"]
texture = ExtResource( 1 )

[node name="Label" parent="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Close/MarginContainer/HBoxContainer" index="1"]
text = "Close"
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Close" to="." method="_on_Close_pressed"]

[editable path="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Restart"]

[editable path="VBoxContainer/Buttons/VBoxContainer/HBoxContainer/Close"]
